tests/negative/neg_string_array_component.safe
-- Test: neg_string_array_component
-- Description: Array component types of String remain outside PR11.2.
-- Expected: REJECT unsupported_source_construct

package neg_string_array_component

   type slot is range 1 to 4;
   type name_table is array (slot) of string;

